kubernetes/bankapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capstone-deployment
  labels:
    app: capstone
spec:
  replicas: 2
  selector:
    matchLabels:
      app: capstone
  template:
    metadata:
      labels:
        app: capstone
    spec:
      containers:
        - name: capstone-container
          image: 047719652562.dkr.ecr.us-east-1.amazonaws.com/capstone_ecr:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ecr-registry-secret
