kubernetes/bankapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capstone-service
  #namespace: bankapp-namespace
spec:
  selector:
    app: capstone
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
